slowed down ajax interval

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Streaming Example</title>
+    <title>Arduino Radar</title>
     {{ js_resources | safe}}
     {{ css_resources | safe }}
 </head>
