--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,6 +19,9 @@
         <form action="{{ url_for('radar', stream_name="com3") }}">
             <input type="submit" value="com3" />
         </form>
+        <form action="{{ url_for('autopilot', duration=10) }}">
+            <input type="submit" value="10sec autopilot" />
+        </form>
 
     </div>
 </body>
