--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,14 +13,11 @@
 
     <div>
         Select Data Source to turn on radar
-        <form action="{{ url_for('radar', stream_name="mock") }}">
-            <input type="submit" value="mock" />
-        </form>
-        <form action="{{ url_for('radar', stream_name="com3") }}">
-            <input type="submit" value="com3" />
+        <form action="{{ url_for('radar') }}">
+            <input type="submit" value="Start Radar" />
         </form>
         <form action="{{ url_for('autopilot', duration=10) }}">
-            <input type="submit" value="10sec autopilot" />
+            <input type="submit" value="Start 10sec Autopilot" />
         </form>
 
     </div>
